добавил выделение текущей страницы

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="page-wrapper">
         <header class="site-header">
             <nav class="nav-menu">
-                <a href="./index.html" class="nav-btn main-page">Главная</a>
+                <a href="./index.html" class="nav-btn main-page active">Главная</a>
                 <a href="./about.html" class="nav-btn about-page">О нас</a>
                 <a href="/catalog.html" class="nav-btn catalog-page">Каталог</a>
                 <a href="/contacts.html" class="nav-btn contacts-page">Контакты</a>
