--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
     <header class="site-header">
         <nav class="nav-menu">
             <a href="./index.html" class="nav-btn main-page">Главная</a>
-            <a href="./about.html" class="nav-btn about-page">О нас</a>
+            <a href="./about.html" class="nav-btn about-page active">О нас</a>
             <a href="/catalog.html" class="nav-btn catalog-page">Каталог</a>
             <a href="/contacts.html" class="nav-btn contacts-page">Контакты</a>
             <a href="#" class="btn btn-login">Вход</a>
