--- a/about.html
+++ b/about.html
@@ -12,8 +12,8 @@
         <nav class="nav-menu">
             <a href="./index.html" class="nav-btn main-page">Главная</a>
             <a href="./about.html" class="nav-btn about-page active">О нас</a>
-            <a href="/catalog.html" class="nav-btn catalog-page">Каталог</a>
-            <a href="/contacts.html" class="nav-btn contacts-page">Контакты</a>
+            <a href="./catalog.html" class="nav-btn catalog-page">Каталог</a>
+            <a href="./contacts.html" class="nav-btn contacts-page">Контакты</a>
             <a href="#" class="btn btn-login">Вход</a>
             <a href="#" class="btn btn-register">Регистрация</a>
         </nav>
