--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
             <nav class="nav-menu">
                 <a href="./index.html" class="nav-btn main-page active">Главная</a>
                 <a href="./about.html" class="nav-btn about-page">О нас</a>
-                <a href="/catalog.html" class="nav-btn catalog-page">Каталог</a>
-                <a href="/contacts.html" class="nav-btn contacts-page">Контакты</a>
+                <a href="./catalog.html" class="nav-btn catalog-page">Каталог</a>
+                <a href="./contacts.html" class="nav-btn contacts-page">Контакты</a>
                 <a href="#" class="btn btn-login">Вход</a>
                 <a href="#" class="btn btn-register">Регистрация</a>
             </nav>
@@ -63,7 +63,7 @@
             </div>
           </div>
           <div class="about-cta-wrapper">
-            <a href="#" class="about-cta-button">Смотреть весь каталог</a>
+            <a href="./catalog.html" class="about-cta-button">Смотреть весь каталог</a>
           </div>
         </section>
         <section class="room-transformation">
@@ -94,7 +94,7 @@
           </div>
         </section>
       </main>
-      <footer>
+      <footer class="footer">
         <div class="footer-columns">
           <div class="footer-column">
             <h3>Наша компания</h3>
