--- a/about.html
+++ b/about.html
@@ -26,22 +26,22 @@
         <h2>Наша команда</h2>
         <div class="team-grid">
             <div class="team-card">
-                <img src="https://source.unsplash.com/200x200/?chef,woman" alt="Шеф‑кондитер" loading="lazy">
+                <img src="./assets/female1.jfif" alt="Шеф‑кондитер" loading="lazy">
                 <h3>Анна Петрова</h3>
                 <p>Шеф‑кондитер</p>
             </div>
             <div class="team-card">
-                <img src="https://source.unsplash.com/200x200/?pastry,man" alt="Кондитер‑декоратор" loading="lazy">
+                <img src="./assets/male1.jfif" alt="Кондитер‑декоратор" loading="lazy">
                 <h3>Илья Волков</h3>
                 <p>Декоратор</p>
             </div>
             <div class="team-card">
-                <img src="https://source.unsplash.com/200x200/?baker,woman" alt="Кондитер" loading="lazy">
+                <img src="./assets/female2.jfif" alt="Кондитер" loading="lazy">
                 <h3>София Лебедева</h3>
                 <p>Технолог</p>
             </div>
             <div class="team-card">
-                <img src="https://source.unsplash.com/200x200/?manager,cafe" alt="Менеджер заказов" loading="lazy">
+                <img src="./assets/male2.jfif" alt="Менеджер заказов" loading="lazy">
                 <h3>Дмитрий Орлов</h3>
                 <p>Менеджер заказов</p>
             </div>
